tencentcloud-sdk-ruby '0.2.0', 2020-10-20
-----------------------------------------

- ADD ocr Support

tencentcloud-sdk-ruby '0.1.0', 2020-09-17
-----------------------------------------

- ADD trtc Support