@@ -3,5 +3,6 @@
 require 'tencent_cloud/version'
 # require "tencent_cloud/trtc/v20190722/trtc_client"
 # require "tencent_cloud/ocr/v20181119/ocr_client"
+# require "tencent_cloud/ocr/v20180606/cdn_client"
 module TencentCloud
 end
