@@ -1,5 +1,5 @@
 # frozen_string_literal: true
 
 module TencentCloud
-  VERSION = '0.2.1'
+  VERSION = '0.2.2'
 end
