@@ -1,3 +1,8 @@
+tencentcloud-sdk-ruby '0.2.2', 2020-11-20
+-----------------------------------------
+
+- ADD cdn Support
+
 tencentcloud-sdk-ruby '0.2.0', 2020-10-20
 -----------------------------------------
 
